--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/i18next": "^13.0.0",
     "axios": "^1.7.7",
     "i18next": "^23.16.4",
+    "lucide-react": "^0.453.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.1.0"
