--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
     "@types/i18next": "^13.0.0",
     "axios": "^1.7.7",
     "i18next": "^23.16.4",
